Wed Sep 02 03:13:45 GMT 2015  Olly Betts <olly@survex.com>

	* docs/stemming.rst,languages/armenian.sbl,languages/basque.sbl,
	  languages/catalan.sbl: Update snowball website links to
	  snowballstem.org.  Correct "2-clause BSD" to "3-clause BSD".

Sun Aug 30 04:43:49 GMT 2015  Olly Betts <olly@survex.com>

	* net/remote_protocol.rst: Markup tweak.

Thu Aug 13 08:56:25 GMT 2015  Olly Betts <olly@survex.com>

	* backends/remote/remote-database.cc: Improve error when the client and
	  server remote protocol versions aren't compatible.

Tue Aug 11 09:32:46 GMT 2015  Olly Betts <olly@survex.com>

	* docs/: Strip out "quickstart" examples which are out of date and
	  rather redundant with the "simple" examples.

Tue Aug 11 08:24:48 GMT 2015  Olly Betts <olly@survex.com>

	* pkgconfig/xapian-core.pc.in: Fix library name in .pc file to say
	  "xapian" not "xapian-core".  Reported by Eric Lindblad to the
	  xapian-devel list.

Tue Jul 07 01:37:00 GMT 2015  Olly Betts <olly@survex.com>

	* api/omenquire.cc,api/query.cc,backends/chert/,backends/database.cc,
	  backends/database.h,backends/glass/,common/io_utils.cc,
	  common/io_utils.h,configure.ac,include/xapian/enquire.h,
	  include/xapian/query.h,matcher/multimatch.cc: Where posix_fadvise()
	  is available, use it to prefetch postlist Btree blocks from the
	  level below the root block which will be needed for postlists of
	  terms in the query, and similarly for the record/docdata table
	  when MSet::fetch() is called.  Based on patch by Will Greenberg
	  in #671.

Mon Jul 06 09:44:54 GMT 2015  Olly Betts <olly@survex.com>

	* common/safeunistd.h,configure.ac: Don't provide our own
	  implementation of sleep() under __WIN32__ if there's already one -
	  mingw provides one, and in some situations it seems to clash with
	  ours.  Reported to xapian-discuss by John Alveris.

Mon Jun 29 12:10:22 GMT 2015  Olly Betts <olly@survex.com>

	* backends/chert/chert_compact.cc: Need <unistd.h> for unlink() on